fix long ass project images on mobile

--- a/app.css
+++ b/app.css
@@ -132,7 +132,7 @@ h1 {
 /* "Automagic" image grid stuff */
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit,         minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-gap: 4rem;
   width: 100%;
   max-width: 1280px;
@@ -168,8 +168,18 @@ h1 {
 }
 
 @media screen and (max-width: 600px) {
+  .projects-grid {
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem; */
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+  }
+
   .project-image {
-    height: 200px;
+    height: 100px;
     width: 100%;
   }
 }
